--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
-        "rtconner/laravel-likeable": "^3.2"
+        "rtconner/laravel-likeable": "^3.2",
+        "spatie/laravel-medialibrary": "^11.4"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.13",
